kubernetes/addons/storage/rook-ceph/external-ceph-cluster/dashboard-endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: microceph-dashboard
  namespace: rook-ceph
subsets:
  - addresses:
      - ip: 192.168.205.101
      - ip: 192.168.205.102
      - ip: 192.168.205.103
    ports:
      - name: http
        port: 8443
        protocol: TCP
