kubernetes/addons/storage/rook-ceph/external-ceph-cluster/dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microceph-dashboard
  namespace: rook-ceph
  labels:
    app: microceph
spec:
  type: ExternalName
  externalName: microceph-dashboard
  ports:
    - name: http
      port: 8443
      protocol: TCP
      targetPort: 8443
