kubernetes/addons/storage/rook-ceph/external-ceph-cluster/dashboard-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rook-ceph-ingress
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ceph.javiersant.com`)
      kind: Rule
      services:
        - kind: Service
          name: microceph-dashboard
          port: 8443
  tls:
    secretName: wildcard-javiersant-com-tls
